visiba-care/vc-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vc-service
spec:
  selector:
    matchLabels:
      app: vc-service
  template:
    metadata:
      labels:
        app: vc-service
    spec:
      containers:
        - name: vc-service
          image: visiba.azurecr.io/visiba-care/vcservice:latest
          resources:
            limits:
              memory: "1G"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              subPath: instance.json
              mountPath: /app/Configurations/instance.json
          livenessProbe:
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: config-volume
          # configMap:
          #   name: instance-configmap
          secret:
            secretName: service-instance-config
