visiba-care/vc-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vc-service
spec:
  selector:
    app: vc-service
  ports:
  - port: 80
    targetPort: 80
