visiba-care/vc-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
spec:
  rules:
  - host: fs1-instancename.exampledomain.topdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vc-service
            port:
              number: 80
